# Machine-Learning

./: .gitignore  .gitmodules  DDPG.py  README.md  environment.py  memory_replay.py  networks.py  pyproject.toml  requirements.txt  tool_function.py
Deep Learning/CNN/: .gitignore  CNN.ipynb
Deep Learning/Translation/: Evaluate.ipynb  README.md  Translation.ipynb
Deep-Learning/Image-Classification/: CNN.ipynb  pyproject.toml
Deep-Learning/Translation/: README.md  pyproject.toml
Reinforcement Learning/Continuous Contral/: DDPG.ipynb  README.md  memory_replay.py  networks.py
Reinforcement-Learning/Continuous-Control/: README.md  environment.py  memory_replay.py  networks.py  pyproject.toml  tool_function.py
Reinforcement-Learning/Multi-Agent/: README.md
