[project]
name = "machine-learning"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.5.4",
    "gymnasium[all]",
    "ipykernel",
    "ipywidgets>=8.1.8",
    "kagglehub>=1.0.2",
    "livelossplot>=0.6.1",
    "matplotlib>=3.11.0",
    "nltk>=3.9.4",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pandas-stubs~=3.0.3",
    "tensorboard",
    "torch",
    "torchvision",
]

[[tool.uv.index]]
name = "pytorch-cu132"
url = "https://download.pytorch.org/whl/cu132"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu132", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu132", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
