[project]
name = "machine-learning"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "duckdb",
    "gymnasium[all]",
    "ipykernel",
    "ipywidgets",
    "kagglehub",
    "livelossplot",
    "matplotlib",
    "nltk",
    "numpy",
    "pandas",
    "pandas-stubs",
    "tensorboard",
    "torch",
    "torchvision",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
