[project]
name = "machine-learning"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "torch>=2.11.0",
    "numpy>=2.4.6",
    "matplotlib>=3.11.0",
    # Jupyter support
    "ipykernel>=7.3.0",
    "ipywidgets>=8.1.0",
    # Ruff for linting
    "ruff>=0.15.22",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[tool.uv.workspace]
members = [
    "Reinforcement-Learning/UAV-MEC_Multi-Agent",
    "Reinforcement-Learning/Continuous-Control",
    "Deep-Learning/Translation",
    "Deep-Learning/Image-Classification",
]

[tool.ruff]
line-length = 90

[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true
